Replace Arrays.asList() with List.of() in test classes
Co-authored-by: kthoms <265597+kthoms@users.noreply.github.com>