@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.rest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -1399,7 +1398,7 @@ public class CaseExecutionRestServiceInteractionTest extends AbstractRestService
     // given
     String variableKey = "aVariableId";
 
-    List<String> payload = Arrays.asList("a", "b");
+    List<String> payload = List.of("a", "b");
     ObjectValue variableValue =
         MockObjectValue
             .fromObjectValue(Variables
@@ -1883,7 +1882,7 @@ public class CaseExecutionRestServiceInteractionTest extends AbstractRestService
     // given
     String variableKey = "aVariableId";
 
-    List<String> payload = Arrays.asList("a", "b");
+    List<String> payload = List.of("a", "b");
     ObjectValue variableValue =
         MockObjectValue
             .fromObjectValue(Variables
