@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.rest;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -191,7 +190,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLock() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -202,8 +201,8 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
-    parameters.put("topics", Arrays.asList(topicParameter));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    parameters.put("topics", List.of(topicParameter));
 
     executePost(parameters);
 
@@ -217,7 +216,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     inOrder.verify(fetchAndLockBuilder).subscribe();
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
-    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).execute();
 
     verifyNoMoreInteractions(fetchTopicBuilder, fetchTopicBuilder, externalTaskService);
@@ -226,7 +225,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithBusinessKey() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -238,8 +237,8 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
-    parameters.put("topics", Arrays.asList(topicParameter));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    parameters.put("topics", List.of(topicParameter));
 
     executePost(parameters);
 
@@ -254,7 +253,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).execute();
 
     verifyNoMoreInteractions(fetchAndLockBuilder, fetchTopicBuilder, externalTaskService);
@@ -263,7 +262,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithProcessDefinition() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -274,11 +273,11 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("processDefinitionId", EXAMPLE_PROCESS_DEFINITION_ID);
-    topicParameter.put("processDefinitionIdIn", Arrays.asList(EXAMPLE_PROCESS_DEFINITION_ID));
+    topicParameter.put("processDefinitionIdIn", List.of(EXAMPLE_PROCESS_DEFINITION_ID));
     topicParameter.put("processDefinitionKey", EXAMPLE_PROCESS_DEFINITION_KEY);
-    topicParameter.put("processDefinitionKeyIn", Arrays.asList(EXAMPLE_PROCESS_DEFINITION_KEY));
+    topicParameter.put("processDefinitionKeyIn", List.of(EXAMPLE_PROCESS_DEFINITION_KEY));
     topicParameter.put("lockDuration", 12354L);
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     executePost(parameters);
 
@@ -304,7 +303,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithVariableValue() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -315,13 +314,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     // when
     executePost(parameters);
@@ -337,7 +336,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).processInstanceVariableEquals(variableValueParameter);
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -347,7 +346,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithCreateTimeDesc() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -359,13 +358,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     // when
     executePost(parameters);
@@ -385,7 +384,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     inOrder.verify(fetchAndLockBuilder).subscribe();
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).processInstanceVariableEquals(variableValueParameter);
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -395,7 +394,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithSortOrderInvalidCase() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -407,13 +406,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     // when
     given()
@@ -439,7 +438,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithEmptySortOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -451,13 +450,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     // when
     given()
@@ -483,7 +482,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithBlankSortOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     String sortOrder = " ";
     Map<String, Object> parameters = new HashMap<>();
@@ -496,13 +495,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     // when
     given()
@@ -528,7 +527,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithCreateTimeWithoutOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -540,13 +539,13 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("businessKey", EXAMPLE_BUSINESS_KEY);
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
 
     Map<String, Object> variableValueParameter = new HashMap<>();
     variableValueParameter.put(EXAMPLE_VARIABLE_INSTANCE_NAME, EXAMPLE_PRIMITIVE_VARIABLE_VALUE.getValue());
     topicParameter.put("processVariables", variableValueParameter);
 
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     // when
     executePost(parameters);
@@ -566,7 +565,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
     inOrder.verify(fetchTopicBuilder).businessKey(EXAMPLE_BUSINESS_KEY);
-    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).processInstanceVariableEquals(variableValueParameter);
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -576,7 +575,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithCreateTimeWithInvalidOrder() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("maxTasks", 5);
@@ -632,7 +631,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchWithoutVariables() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -642,7 +641,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     given()
       .contentType(POST_JSON_CONTENT_TYPE)
@@ -673,7 +672,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockWithTenant() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -685,9 +684,9 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("withoutTenantId", true);
     topicParameter.put("tenantId", "tenant1");
-    topicParameter.put("tenantIdIn", Arrays.asList("tenant2"));
+    topicParameter.put("tenantIdIn", List.of("tenant2"));
     topicParameter.put("lockDuration", 12354L);
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     executePost(parameters);
 
@@ -711,7 +710,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockByProcessDefinitionVersionTag() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -722,7 +721,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
     topicParameter.put("processDefinitionVersionTag", "versionTag");
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     executePost(parameters);
 
@@ -745,7 +744,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testFetchAndLockIncludeExtensionProperties() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -756,7 +755,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
     topicParameter.put("includeExtensionProperties", true);
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     executePost(parameters);
 
@@ -779,7 +778,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testEnableCustomObjectDeserialization() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -789,9 +788,9 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     topicParameter.put("deserializeValues", true);
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     given()
       .contentType(POST_JSON_CONTENT_TYPE)
@@ -814,7 +813,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
     inOrder.verify(fetchTopicBuilder).topic("aTopicName", 12354L);
 
-    inOrder.verify(fetchTopicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(fetchTopicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(fetchTopicBuilder).enableCustomObjectDeserialization();
     inOrder.verify(fetchTopicBuilder).execute();
 
@@ -824,7 +823,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
   @Test
   void testLocalVariables() {
     // given
-    when(fetchTopicBuilder.execute()).thenReturn(Arrays.asList(lockedExternalTaskMock));
+    when(fetchTopicBuilder.execute()).thenReturn(List.of(lockedExternalTaskMock));
 
     // when
     Map<String, Object> parameters = new HashMap<>();
@@ -834,9 +833,9 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> topicParameter = new HashMap<>();
     topicParameter.put("topicName", "aTopicName");
     topicParameter.put("lockDuration", 12354L);
-    topicParameter.put("variables", Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    topicParameter.put("variables", List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     topicParameter.put("localVariables", true);
-    parameters.put("topics", Arrays.asList(topicParameter));
+    parameters.put("topics", List.of(topicParameter));
 
     given()
       .contentType(POST_JSON_CONTENT_TYPE)
@@ -859,7 +858,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
     inOrder.verify(fetchAndLockBuilder).subscribe();
 
     inOrder.verify(topicBuilder).topic("aTopicName", 12354L);
-    inOrder.verify(topicBuilder).variables(Arrays.asList(EXAMPLE_VARIABLE_INSTANCE_NAME));
+    inOrder.verify(topicBuilder).variables(List.of(EXAMPLE_VARIABLE_INSTANCE_NAME));
     inOrder.verify(topicBuilder).localVariables();
 
     inOrder.verify(fetchTopicBuilder).execute();
@@ -1615,7 +1614,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksAsync() {
-    List<String> externalTaskIds = Arrays.asList("externalTaskId1", "externalTaskId2");
+    List<String> externalTaskIds = List.of("externalTaskId1", "externalTaskId2");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("externalTaskIds", externalTaskIds);
@@ -1643,7 +1642,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksSync() {
-    List<String> externalTaskIds = Arrays.asList("externalTaskId1", "externalTaskId2");
+    List<String> externalTaskIds = List.of("externalTaskId1", "externalTaskId2");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("externalTaskIds", externalTaskIds);
@@ -1671,7 +1670,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksAsyncByProcessInstanceIds() {
-    List<String> processInstanceIds = Arrays.asList("123", "456");
+    List<String> processInstanceIds = List.of("123", "456");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("processInstanceIds", processInstanceIds);
@@ -1699,7 +1698,7 @@ public class ExternalTaskRestServiceInteractionTest extends AbstractRestServiceT
 
   @Test
   void testSetRetriesForExternalTasksSyncByProcessInstanceIds() {
-    List<String> processInstanceIds = Arrays.asList("123", "456");
+    List<String> processInstanceIds = List.of("123", "456");
     Map<String, Object> parameters = new HashMap<>();
     parameters.put("retries", "5");
     parameters.put("processInstanceIds", processInstanceIds);
