@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.rest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
@@ -979,7 +978,7 @@ public class ProcessInstanceRestServiceQueryTest extends
 
   @Test
   void testWithoutTenantIdParameter() {
-    mockedQuery = setUpMockInstanceQuery(Arrays.asList(MockProvider.createMockInstance(null)));
+    mockedQuery = setUpMockInstanceQuery(List.of(MockProvider.createMockInstance(null)));
 
     Response response = given()
       .queryParam("withoutTenantId", true)
@@ -1030,7 +1029,7 @@ public class ProcessInstanceRestServiceQueryTest extends
 
   @Test
   void testWithoutTenantIdPostParameter() {
-    mockedQuery = setUpMockInstanceQuery(Arrays.asList(MockProvider.createMockInstance(null)));
+    mockedQuery = setUpMockInstanceQuery(List.of(MockProvider.createMockInstance(null)));
 
     Map<String, Object> queryParameters = new HashMap<>();
     queryParameters.put("withoutTenantId", true);
@@ -1055,7 +1054,7 @@ public class ProcessInstanceRestServiceQueryTest extends
   }
 
   private List<ProcessInstance> createMockProcessInstancesTwoTenants() {
-    return Arrays.asList(
+    return List.of(
         MockProvider.createMockInstance(MockProvider.EXAMPLE_TENANT_ID),
         MockProvider.createMockInstance(MockProvider.ANOTHER_EXAMPLE_TENANT_ID));
   }
