@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.api.authorization.task.getvariable;
+import java.util.List;
 
-import java.util.Arrays;
 import java.util.Map;
 
 import org.junit.jupiter.api.AfterEach;
@@ -274,7 +274,7 @@ public abstract class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    Map<String, Object> variables = taskService.getVariables(taskId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = taskService.getVariables(taskId, List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -297,7 +297,7 @@ public abstract class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    Map<String, Object> variables = taskService.getVariablesLocal(taskId, Arrays.asList(VARIABLE_NAME));
+    Map<String, Object> variables = taskService.getVariablesLocal(taskId, List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -318,7 +318,7 @@ public abstract class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    VariableMap variables = taskService.getVariablesTyped(taskId, Arrays.asList(VARIABLE_NAME), false);
+    VariableMap variables = taskService.getVariablesTyped(taskId, List.of(VARIABLE_NAME), false);
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -341,7 +341,7 @@ public abstract class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    Map<String, Object> variables = taskService.getVariablesLocalTyped(taskId, Arrays.asList(VARIABLE_NAME), false);
+    Map<String, Object> variables = taskService.getVariablesLocalTyped(taskId, List.of(VARIABLE_NAME), false);
 
     // then
     if (authRule.assertScenario(scenario)) {
