@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.test.api.runtime;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -99,7 +98,7 @@ public class ModificationExecutionAsyncTest {
 
   @Parameters(name = "Job DueDate is set: {0}")
   public static Collection<Object[]> scenarios() {
-    return Arrays.asList(new Object[][] {
+    return List.of(new Object[][] {
       { false, null },
       { true, START_DATE }
     });
@@ -186,7 +185,7 @@ public class ModificationExecutionAsyncTest {
 
   @TestTemplate
   void createModificationUsingProcessInstanceIdsListWithNullValueAsync() {
-    var modificationBuilder = runtimeService.createModification("processDefinitionId").startAfterActivity("user1").processInstanceIds(Arrays.asList("foo", null, "bar"));
+    var modificationBuilder = runtimeService.createModification("processDefinitionId").startAfterActivity("user1").processInstanceIds(List.of("foo", null, "bar"));
 
     try {
       modificationBuilder.executeAsync();
@@ -1200,7 +1199,7 @@ public class ModificationExecutionAsyncTest {
     Batch batch = runtimeService
       .createModification(processDefinition.getId())
       .startBeforeActivity("user2")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .executeAsync();
 
     helper.completeSeedJobs(batch);
@@ -1233,7 +1232,7 @@ public class ModificationExecutionAsyncTest {
     Batch batch = runtimeService
       .createModification(processDefinition.getId())
       .cancelAllForActivity("user2")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .skipCustomListeners()
       .executeAsync();
 
@@ -1260,7 +1259,7 @@ public class ModificationExecutionAsyncTest {
     Batch batch = runtimeService
       .createModification(processDefinition.getId())
       .startAfterActivity("user2")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .executeAsync();
 
     helper.completeSeedJobs(batch);
@@ -1293,7 +1292,7 @@ public class ModificationExecutionAsyncTest {
     Batch batch = runtimeService
       .createModification(processDefinition.getId())
       .startBeforeActivity("user2")
-      .processInstanceIds(Arrays.asList(processInstance.getId()))
+      .processInstanceIds(List.of(processInstance.getId()))
       .skipIoMappings()
       .executeAsync();
 
