@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.test.api.runtime;
 
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -71,7 +70,7 @@ class UpdateProcessInstancesSuspendStateAsyncTest {
     ProcessInstance processInstance2 = runtimeService.startProcessInstanceByKey("twoExternalTaskProcess");
 
     // when
-    Batch suspendprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId())).suspendAsync();
+    Batch suspendprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId())).suspendAsync();
     helper.completeSeedJobs(suspendprocess);
     helper.executeJobs(suspendprocess);
 
@@ -93,7 +92,7 @@ class UpdateProcessInstancesSuspendStateAsyncTest {
     ProcessInstance processInstance2 = runtimeService.startProcessInstanceByKey("twoExternalTaskProcess");
 
     // when
-    Batch suspendprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId())).suspendAsync();
+    Batch suspendprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId())).suspendAsync();
 
     // then
     Job seedJob = helper.getSeedJob(suspendprocess);
@@ -134,7 +133,7 @@ class UpdateProcessInstancesSuspendStateAsyncTest {
 
     // when
     Batch batch = runtimeService.updateProcessInstanceSuspensionState()
-        .byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId()))
+        .byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId()))
         .suspendAsync();
 
     // then
@@ -159,7 +158,7 @@ class UpdateProcessInstancesSuspendStateAsyncTest {
 
     // when
     Batch batch = runtimeService.updateProcessInstanceSuspensionState()
-        .byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId()))
+        .byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId()))
         .activateAsync();
 
     // then
@@ -179,10 +178,10 @@ class UpdateProcessInstancesSuspendStateAsyncTest {
     ProcessInstance processInstance2 = runtimeService.startProcessInstanceByKey("twoExternalTaskProcess");
 
     // when
-    Batch suspendprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId())).suspendAsync();
+    Batch suspendprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId())).suspendAsync();
     helper.completeSeedJobs(suspendprocess);
     helper.executeJobs(suspendprocess);
-    Batch activateprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId())).activateAsync();
+    Batch activateprocess = runtimeService.updateProcessInstanceSuspensionState().byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId())).activateAsync();
     helper.completeSeedJobs(activateprocess);
     helper.executeJobs(activateprocess);
 
@@ -322,7 +321,7 @@ class UpdateProcessInstancesSuspendStateAsyncTest {
     ProcessInstance processInstance1 = runtimeService.startProcessInstanceByKey("oneExternalTaskProcess");
     ProcessInstance processInstance2 = runtimeService.startProcessInstanceByKey("twoExternalTaskProcess");
     var updateProcessInstancesSuspensionStateBuilder = runtimeService.updateProcessInstanceSuspensionState()
-      .byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId(), null));
+      .byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId(), null));
 
     // when/then
     assertThatThrownBy(updateProcessInstancesSuspensionStateBuilder::activateAsync)
@@ -338,7 +337,7 @@ class UpdateProcessInstancesSuspendStateAsyncTest {
     ProcessInstance processInstance1 = runtimeService.startProcessInstanceByKey("oneExternalTaskProcess");
     ProcessInstance processInstance2 = runtimeService.startProcessInstanceByKey("twoExternalTaskProcess");
     var updateProcessInstancesSuspensionStateBuilder = runtimeService.updateProcessInstanceSuspensionState()
-      .byProcessInstanceIds(Arrays.asList(processInstance1.getId(), processInstance2.getId(), null));
+      .byProcessInstanceIds(List.of(processInstance1.getId(), processInstance2.getId(), null));
 
     // when/then
     assertThatThrownBy(updateProcessInstancesSuspensionStateBuilder::suspendAsync)
