@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.test.bpmn.async;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -51,7 +50,7 @@ class AsyncEmailTaskTest extends EmailTestCase {
 
     WiserMessage message = messages.get(0);
     EmailServiceTaskTest.assertEmailSend(message, false, "Hello Kermit!", "This a text only e-mail.", "operaton@localhost",
-            Arrays.asList("kermit@operaton.org"), null);
+            List.of("kermit@operaton.org"), null);
     testRule.assertProcessEnded(procId);
   }
 
@@ -71,7 +70,7 @@ class AsyncEmailTaskTest extends EmailTestCase {
 
     WiserMessage message = messages.get(0);
     EmailServiceTaskTest.assertEmailSend(message, false, "Hello Kermit!", "This a text only e-mail.", "operaton@localhost",
-            Arrays.asList("kermit@operaton.org"), null);
+            List.of("kermit@operaton.org"), null);
   }
 
 }
