@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
+import java.util.List;
 
-import java.util.Arrays;
 import java.util.Collection;
 
 import org.operaton.bpm.model.bpmn.impl.instance.DataInputRefs;
@@ -36,7 +36,7 @@ public class InputSetTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(DataInputRefs.class),
       new ChildElementAssumption(OptionalInputRefs.class),
       new ChildElementAssumption(WhileExecutingInputRefs.class),
@@ -46,7 +46,7 @@ public class InputSetTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("name")
     );
   }
