@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
+import java.util.List;
 
-import java.util.Arrays;
 import java.util.Collection;
 
 import org.operaton.bpm.model.bpmn.impl.instance.EventDefinitionRef;
@@ -33,7 +33,7 @@ public class ThrowEventTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(DataInput.class),
       new ChildElementAssumption(DataInputAssociation.class),
       new ChildElementAssumption(InputSet.class, 0, 1),
